--- a/final-proj/src/components/Event_Card/event_card.css
+++ b/final-proj/src/components/Event_Card/event_card.css
@@ -81,9 +81,9 @@ html {
 }
 
 .padding-between-cards {
-  padding: 5px;
-  margin-left: 20px;
-  margin-bottom: 20px;
+  padding: 2px;
+  margin-left: 17px;
+  margin-bottom: 17px;
 }
 
 .padding-between-cards:hover {
